# node-api-python

./: .editorconfig  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  changelog.yml  ci.yml  docs.yml  release.yml
bench/: data.js  run.js
bench/fixtures/: bench_module.py
docs/: index.html
examples/basic/: main.js  math_utils.py
examples/cli-tool/: README.md  cli.js  tools.py
examples/data-pipeline/: README.md  main.js  pipeline.py
examples/express-api/: README.md  sentiment.py  server.js  text_processor.py
examples/fullstack/: README.md  analytics.py  server.ts
examples/fullstack/types/: analytics.d.ts
examples/realtime/: README.md  main.js  processor.py
lib/: index.ts  module.ts  types.ts
scripts/: cli.js  doctor.js  find-python.js  generate-types.js  init.js  postinstall.js  prebuild.js  release.js
src/cpp/: addon.cpp  callback.cpp  callback.h  converter.cpp  converter.h  interpreter.cpp  interpreter.h
src/python/typegen/: __init__.py  cli.py  emitter.py  extractor.py
test/fixtures/: callbacks.py  compute.py  edge_cases.py  import_error.py  syntax_error.py  type_test.py
test/js/: callback.test.ts  edge-cases.test.ts  import.test.ts  integration.test.ts  sync-async.test.ts  types.test.ts
test/python/: test_fixtures.py  test_typegen.py
