[project]
name = "node-api-python-typegen"
version = "0.0.1"
description = "TypeScript type generator for node-api-python"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Davide Baraldo" }
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["test/python"]
